# Sea-Battle

./: .clang-uml  .gitignore  Makefile  README.md  Ship.cpp  Ship.h  chaos-diagram.puml  classes.mdj  full-diagram.puml  full_diagram.puml  lab1.docx  lab2.docx  lab3.docx  lab4.docx  lab4_diagram.puml  plans.txt  playField  playField.cpp  playField.h  shipManager.cpp  shipManager.h
game/: CMakeLists.txt
game/data/: Nastya_control.json  control.json  save.json
game/saves/: data_game.json
game/src/: CMakeLists.txt  Game.cpp  Game.h  Player.cpp  Player.h  SeaBattle.h  Ship.cpp  Ship.h  botPlayer.cpp  botPlayer.h  humanPlayer.cpp  humanPlayer.h  main.cpp  playField.cpp  playField.h  shipManager.cpp  shipManager.h  test_handler.h
game/src/IO/: GUIDrawField.cpp  GUIDrawField.h  GUIDrawText.cpp  GUIDrawText.h  GUIInput.cpp  GUIInput.h  GUIOutput.cpp  GUIOutput.h  controlReader.h  gameController.cpp  gameController.h  gameInput.h  gameOutput.h  gameTracker.h
game/src/RW/: controlReader.h  fileRW.cpp  fileRW.h  fileRead.cpp  fileRead.h  fileWrite.cpp  fileWrite.h
game/src/SL/: saveLoadManager.cpp  saveLoadManager.h
game/src/abilities/: IAbility.h  abilitiesManager.cpp  abilitiesManager.h  abilityInfo.h  doubleDamageAbility.cpp  doubleDamageAbility.h  scannerAbility.cpp  scannerAbility.h  shellingAbility.cpp  shellingAbility.h
game/src/console/: consoleDrawer.cpp  consoleDrawer.h  inputManager.cpp  inputManager.h
game/src/errors/: errors.h  indexOutOfBounds.h  inputException.h  invalidFieldSize.h  invalidShipLength.h  invalidShipPosition.h  objectOutOfBounds.h  (+1 more)
(+48 files in other folders)
